tests/fixtures/errors/invalid_group_empty_else_branch.puml
@startuml
participant A
participant B
alt branch
  A -> B : first
else empty-branch
end
@enduml
